Fix header z-index

--- a/public/assets/css/output.css
+++ b/public/assets/css/output.css
@@ -740,10 +740,6 @@ video {
   z-index: 200;
 }
 
-.z-\[80\] {
-  z-index: 80;
-}
-
 .m-4 {
   margin: 1rem;
 }
@@ -776,11 +772,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
 }
 
 .my-2 {
